syntax = "proto3";

package com.phantom.protocol;

option java_multiple_files = true;
option java_package = "com.phantom.common";

message AuthenticateRequest {
    string uid = 1;
    string token = 2;
}

message AuthenticateResponse {
    string uid = 1;
    string token = 2;
    int64 timestamp = 3;
    int32 status = 4;
}

message AcceptorRegisterRequest {
    string acceptorInstanceId = 1;
}

message C2cMessageRequest {
    string senderId = 1;
    string receiverId = 2;
    string content = 3;
    string crc = 4;
    int32 platform = 5;
}

message C2cMessageResponse {
    string senderId = 1;
    string receiverId = 2;
    int64 timestamp = 3;
    int32 status = 4;
    string crc = 5;
    int32 platform = 6;
    int64 messageId = 7;
}

message InformFetchMessageResponse {
    string uid = 1;
}

message FetchMessageRequest {
    string uid = 1;
    int32 size = 2;
    int64 timestamp = 3;
    int32 platform = 4;
}

message FetchMessageResponse {
    bool isEmpty = 1;
    repeated OfflineMessage messages = 2;
    string uid = 3;
}

message OfflineMessage {
    string senderId = 1;
    string receiverId = 2;
    string content = 3;
    int64 timestamp = 4;
    int64 messageId = 5;
    string groupId = 6;
    int64 sequence = 7;
    string crc = 8;
    int32 platform = 9;
}

message C2gMessageRequest {
    string senderId = 1;
    string groupId = 2;
    int64 timestamp = 3;
    string content = 4;
    string crc = 5;
    int32 platform = 6;
}

message C2gMessageResponse {
    string senderId = 1;
    string groupId = 2;
    int64 timestamp = 3;
    int32 status = 4;
    string crc = 5;
    int32 platform = 6;
    int64 messageId = 7;
}
